modified:   game/templates/multiends/web.html 	modified:   game/urls/playground/index.py 	modified:   game/views/index.py

--- a/game/templates/multiends/web.html
+++ b/game/templates/multiends/web.html
@@ -1,4 +1,4 @@
-<% load static %>
+{% load static %}
 
 <head>
     <link rel="stylesheet" href="https://cdn.acwing.com/static/jquery-ui-dist/jquery-ui.min.css">
