--- a/game/templates/multiends/web.html
+++ b/game/templates/multiends/web.html
@@ -8,10 +8,11 @@
 </head>
 
 <body style="margin:0">
-    <div id = "ac_game12345678"></div>
+    <div id = "ac_game_12345678"></div>
     <script>
-        ${document}.ready(function(){
-            let ac_game = AcGame(ac_game12345678);
+        $(document).ready(function(){
+            let ac_game = new AcGame("ac_game_12345678");
         });
+        console.log("hello world!");
     </script>
 </body>
